frontend/src/components/OldHomePage/ShoeList.css
/* Need to move into it's own file */
body{
    font-family:-apple-system,  Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
    /* chrome */
    /* background-color:#a7b9c7; */
    /* background-image: url("../../background-images/spalsh-page-background-img-2.png"); */

    /* background-image: url("../../background-images/spalsh-page-background-img-2.png"); */
}

footer{
    text-align: center;
}

img {
    opacity:0.88;

  }


  html{
    width: 100%;
  }



  /* button{ */
    /* border-radius: 10% / 50%;;
    height: 30px;
    background-color: white; */
  /* } */

  /* button{ */
      /* color: white; */
    /* letter-spacing: .05rem;
    transition: .5s all ease-in-out;
    position: relative;
    background: transparent; */
    /* color: rgba(255,255,255,1);
	background: none;
	border-radius: 0;
	padding: 1.2em 5em;
	letter-spacing: 0.35em;
	font-size: 0.7em;
	transition: background-color 0.3s, box-shadow 0.3s, color 0.3s; */
	/* margin: 1em; */
    /* box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 0.8em rgba(255,255,255,0.3);
    border: #fff solid 2px; */
/* } */



 button:hover{
/* letter-spacing: .4rem; */
color: rgba(0,0,0,0.8);
		background-color: #fff;
		box-shadow: inset 0 0 0 rgba(255,255,255,0.3), 0 0 1.2em rgba(255,255,255,0.5);
 }



  .page{
      background-image: url("https://theplug-app-aws.s3.us-west-1.amazonaws.com/home-page-background-img.jpg");
      /* background-size: 100% 99.999%; */
      background-size: 100% 80%;
      min-height: 100%;
      min-width: 1024px;
      padding-top: 55px;
      /* width: 100%; */
      height: auto;
      position: absolute;
      top: 30px;
      left: 0px;
      z-index: -1;
  }

.networking{
    padding-top:6px;
    padding-bottom: 15px;

}

.homepage-title-container{
    display: flex;
    justify-content: center;
    height: auto;
    padding-bottom: 25px;
}

#homepage-title{
    text-align: center;
    font-size: 100px;
    font-weight: 650;
    color: white;
    margin-top: 25px;
    margin-bottom: 15px;
    /* text-shadow: #df0202 4px 0 20px; */
    /* text-shadow: 5px 3px 0px #df0202; */
    text-shadow: 5px 3px 0px #55adf0;
    /* outline: solid red; */
}



.all-shoes-container{
    display: flex;
    justify-content: space-evenly;
    /* need to figure out how to have the products be evenly placed */
    flex-wrap: wrap;
}

.shoe-container{
    text-align: center;
    background-color: white;
    border: 2px solid white;
    width:375px;
    /* max-width:351px; */
    max-height: 430px;
    margin-right: 8.5px;
    margin-left: 1px;

    /* might look better with images */
    /* height: auto; */
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    margin-bottom: 25px;
}

.fa-shopping-cart{
    width: 20px;
}

.fa-user-circle{
    width: 20px;
}

.shoe-container:hover {
    background-color:#c7d4dd;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0,0,0,0.5);
    /* Decide on what border color to give or give none at all */
    /* border: 4px solid rgb(184, 3, 3); */
    /* border: 4px solid #4B9CD3; */
    /* border: 4px solid #4c6274; */
    /* padding: 20px; */
    /* font-size: 20px; */
    /* text-shadow: 3px 3px 0px #df0202; */
    /* text-shadow: 3px 3px 0px black; */
    /* width:355px;
    height: 405px; */

}

.shoe-container:hover  Link{
    /* color: white; */
    color: red;
    font-size: 10px;
}


.shoe-image-container{
    padding-left: 10px;
    padding-right: 10px;
}

.shoe-image{
    display: revert;
    max-width: 300px;
    max-height: 200px;
    min-width: auto;
}

.shoes-title{
    font-weight: 500;
}

